fix: removed terminal padding, fixing the terminal selection alignment

--- a/styles/pymakr.less
+++ b/styles/pymakr.less
@@ -1019,12 +1019,6 @@ div.pymakr-feedback {
   z-index: -1;
 }
 
-#pymakr-terminal-area {
-  .xterm-rows {
-    padding-left: 6px !important;
-  }
-}
-
 .xterm-cursor.xterm-cursor-blink.xterm-cursor-block {
   border: 1px solid @text-color !important;
 }
